--- a/Utils/PackageManager/FrmWPFPackageManager.xaml
+++ b/Utils/PackageManager/FrmWPFPackageManager.xaml
@@ -12,6 +12,9 @@
     WindowStartupLocation="CenterScreen"
     mc:Ignorable="d">
     <Window.Resources>
+        <FontFamily x:Key="iconfont">
+            pack://application:,,,/IDE;component/Resources/Fonts/#ali-ifont
+        </FontFamily>
         <Style x:Key="TabItemStyle" TargetType="{x:Type TabItem}">
             <Setter Property="Foreground" Value="White" />
             <Setter Property="Background" Value="Transparent" />
@@ -205,8 +208,34 @@
                         <ColumnDefinition Width="3*" />
                         <ColumnDefinition Width="7*" />
                     </Grid.ColumnDefinitions>
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="0.5*" />
+                        <RowDefinition Height="9.5*" />
+                    </Grid.RowDefinitions>
+                    <Grid Grid.ColumnSpan="2">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="9.7*" />
+                            <ColumnDefinition Width="0.3*" />
+                        </Grid.ColumnDefinitions>
+                        <TextBox
+                            x:Name="SearchBox"
+                            Background="Transparent"
+                            Foreground="White" />
+                        <Button
+                            Grid.Column="1"
+                            HorizontalAlignment="Center"
+                            VerticalAlignment="Center"
+                            Background="Transparent"
+                            BorderBrush="Transparent"
+                            Click="Search"
+                            Content="&#xe623;"
+                            FontFamily="{StaticResource iconfont}"
+                            FontSize="16"
+                            Foreground="Gray" />
+                    </Grid>
                     <ListBox
                         x:Name="ListBoxPackages"
+                        Grid.Row="1"
                         Background="Transparent"
                         SelectionChanged="GetPkgInfo"
                         SelectionMode="Extended">
@@ -217,26 +246,13 @@
                                         <RowDefinition Height="5*" />
                                         <RowDefinition Height="5*" />
                                     </Grid.RowDefinitions>
-                                    <Grid.ColumnDefinitions>
-                                        <ColumnDefinition Width="3*" />
-                                        <ColumnDefinition Width="7*" />
-                                    </Grid.ColumnDefinitions>
-                                    <Image
-                                        Grid.RowSpan="2"
-                                        Width="32"
-                                        Height="32"
-                                        Source="/Resources/Error.64x.png"
-                                        Stretch="Fill"
-                                        StretchDirection="DownOnly" />
                                     <TextBlock
-                                        Grid.Column="1"
                                         FontWeight="Bold"
                                         Foreground="White"
                                         Text="{Binding Name}"
                                         TextAlignment="Center" />
                                     <TextBlock
                                         Grid.Row="1"
-                                        Grid.Column="1"
                                         Background="Transparent"
                                         Foreground="White"
                                         Text="{Binding Version}"
@@ -245,17 +261,17 @@
                             </DataTemplate>
                         </ListBox.ItemTemplate>
                     </ListBox>
-                    <Grid Grid.Column="1">
+                    <Grid Grid.Row="1" Grid.Column="1">
                         <Grid.ColumnDefinitions>
                             <ColumnDefinition Width="2*" />
                             <ColumnDefinition Width="8*" />
                         </Grid.ColumnDefinitions>
                         <Grid.RowDefinitions>
-                            <RowDefinition Height="0.5*" />
-                            <RowDefinition Height="0.5*" />
-                            <RowDefinition Height="0.5*" />
-                            <RowDefinition Height="1.5*" />
-                            <RowDefinition Height="6*" />
+                            <RowDefinition Height="0.7*" />
+                            <RowDefinition Height="0.7*" />
+                            <RowDefinition Height="0.7*" />
+                            <RowDefinition Height="1.3*" />
+                            <RowDefinition Height="5.6*" />
                             <RowDefinition Height="1*" />
                         </Grid.RowDefinitions>
                         <Label
@@ -329,8 +345,9 @@
                             Grid.Row="5"
                             Grid.Column="0"
                             Grid.ColumnSpan="2"
-                            Content="{Binding SelectedPackages,StringFormat='Get {0} Package(s)'}"
                             Click="GetPackage"
+                            Content="{Binding SelectedPackages}"
+                            ContentStringFormat="Get {0} package"
                             FontSize="20"
                             FontWeight="Bold"
                             Foreground="White">
@@ -351,7 +368,7 @@
                 Header="本地"
                 Style="{StaticResource TabItemStyle}">
                 <Grid Background="#33ffffff">
-                    <WindowsFormsHost Name="LocalPkgManager" />
+                    <WindowsFormsHost Name="LocalPkgManager" Grid.ColumnSpan="2" />
                 </Grid>
             </TabItem>
         </TabControl>
